--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Javascript Login Form Validation</title>
-    <link rel="stylesheet" href="C:\Users\sumuk\Desktop\client-visit-final\css\index.css">
-    <script type="text/javascript" src="C:\Users\sumuk\Desktop\client-visit-final\js\validate_index.js"></script>
+    <link rel="stylesheet" href="C:\Users\sumuk\Desktop\colleague_wellbeing\css\index.css">
+    <script type="text/javascript" src="C:/Users/sumuk/Desktop/colleague_wellbeing/js/validate_index.js"></script>
 
 </head>
 <body>
