--- a/html/home_page.html
+++ b/html/home_page.html
@@ -16,14 +16,14 @@
         <!-- nav bar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" >
-                <img src="C:\Users\sumuk\Desktop\client-visit-final\images\logo.png" width="100" height="50" alt="">
+                <img src="C:/Users/sumuk/Desktop/colleague_wellbeing/images/logo.png" width="100" height="50" alt="">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="file:///C:/Users/sumuk/Desktop/client-visit-final/html/home_page.html">Feedback<span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="file:///C:/Users/sumuk/Desktop/client%20visit/mainpage1.html">Responses</a>
+                <a class="nav-item nav-link active" href="#">Feedback<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Responses</a>
              </div>
             </div>
           </nav>
