--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="box">
         <div class="main">
-            <h2>Welcome abcd </h2>
+            <h2>Welcome</h2>
             <form>
                 <div class="input_box">
 
