--- a/html/home_page.html
+++ b/html/home_page.html
@@ -31,8 +31,18 @@
             </div>
           </nav>
             <div class="hero-image">
+
+              <!--colors below nav bar-->
+              <section class="seperator-wrapper">
+                <div class="seperator gradient">
+                </div>
+              </section>
+
+          
                <!--contains bg image on top-->
              </div> 
+
+            
 
              <!--questions start here-->
              <div class="container">
