--- a/html/Responses.html
+++ b/html/Responses.html
@@ -9,7 +9,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="C:\Users\sumuk\Desktop\colleague_wellbeing\css\Res_styl.css">
     </head>
     <body>
        <!-- nav bar-->
@@ -26,6 +26,13 @@
          </div>
         </div>
       </nav>
+
+      <!--colors below nav bar-->
+      <section class="seperator-wrapper">
+        <div class="seperator gradient">
+        </div>
+      </section>
+      <!--colors end-->
         
 
 
